--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.473.0",
     "next": "14.2.16",
+    "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
