--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
+    "hamburger-react": "^2.5.2",
     "lucide-react": "^0.473.0",
     "next": "14.2.16",
     "next-themes": "^0.4.6",
