--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "@tailwindcss/postcss": "^4.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.7.3",
     "hamburger-react": "^2.5.2",
     "lucide-react": "^0.473.0",
-    "next": "14.2.16",
+    "next": "^15.3.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "react": "^18",
@@ -33,8 +34,8 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
