--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,16 @@
       "files": ["next.config.js"],
       "parser": "espree",
       "rules": {}
+    },
+    {
+      "files": ["next.config.mjs"],
+      "parser": "espree",
+      "parserOptions": {
+        "project": null
+      },
+      "rules": {
+        "@typescript-eslint/*": "off"
+      }
     }
   ],
   "plugins": [
